alignwide and alignfull fixes on post and pages

--- a/src/block-globals.editor.scss
+++ b/src/block-globals.editor.scss
@@ -200,11 +200,6 @@
 /* Main column width settings */
 /****************************************************************************************/
 
-.block-editor-editor-skeleton__content .editor-styles-wrapper {
-	margin: 0px auto;
-	width: 94%;
-}
-
 .editor-styles-wrapper .editor-default-block-appender,
 .editor-styles-wrapper .editor-post-title,
 .editor-styles-wrapper .editor-post-title__block {
