--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -330,6 +330,12 @@
 		margin-left: -15px;
 		margin-right: -15px;
 	}
+
+	.single .entry-content>.c9-grid {
+		margin-left: -15px;
+		margin-right: -15px;
+		;
+	}
 }
 
 @media only screen and (min-width: 576px) {
@@ -346,6 +352,11 @@
 	/* 2019/2020 theme specific*/
 	.c9-grid .container-fluid.alignfull {
 		left: auto;
+	}
+
+	.single .entry-content>.c9-grid {
+		margin-left: calc((-100vw + 100%)/2);
+		margin-right: calc((-100vw + 100%)/2);
 	}
 
 	.page-template-default .entry-content>.c9-grid .container-narrow {
@@ -397,6 +408,11 @@
 		margin-right: calc((-100vw + 100%) / 2);
 	}
 
+	.single .entry-content>.c9-grid {
+		margin-left: calc((-100vw + 100%)/2);
+		margin-right: calc((-100vw + 100%)/2);
+	}
+
 	.c9-grid .container-narrow,
 	.container-narrow {
 		max-width: 960px;
@@ -441,6 +457,11 @@
 		max-width: 100vw;
 	}
 
+	.single .entry-content>.c9-grid {
+		margin-left: calc((-100vw + 100%)/2);
+		margin-right: calc((-100vw + 100%)/2);
+	}
+
 	.page-template-default .entry-content>.c9-grid .container.alignwide {
 		padding-left: 5px;
 		padding-right: 5px;
@@ -464,6 +485,16 @@
 	.single .entry-content>.c9-grid {
 		margin-left: calc((-100vw + 100%)/2);
 		margin-right: calc((-100vw + 100%)/2);
+	}
+
+	.single .entry-content>.c9-grid>.container {
+		max-width: 1140px;
+	}
+
+	.single .entry-content>.c9-grid>.container.alignwide {
+		width: 1368px;
+		max-width: 100vw;
+		margin: 0 auto;
 	}
 
 	.container-narrow {
